--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ file(GLOB SourceFiles *.cpp)
 add_executable(fmo_solver ${SourceFiles})
 set_property(TARGET fmo_solver PROPERTY CXX_STANDARD 17)
 set_property(TARGET fmo_solver PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
+add_compile_definitions(VERSION="${VERSION}")
